# My-First-Dara-App

./: .gitignore  README.md  pyproject.toml  run.sh
my_first_app/: data.py  definitions.py  main.py
my_first_app/pages/: classification.py  eda.py  home.py
