[tool.poetry]
name = "my-first-app"
version = "0.1.0"
description = ""
authors = ["Adam Jaamour <adam.jaamour@causalens.com>"]
readme = "README.md"
packages = [{include = "my_first_app"}]


[tool.poetry.dependencies]
python = ">=3.8.0, <3.12.0"
dara-core = {version = "^1.4.6", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
